--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.9.22'
+    id 'org.jetbrains.kotlin.jvm' version '2.1.0'
+    id 'application'
 }
 
 group = 'org.example'
@@ -14,8 +15,14 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter:5.10.0")
     implementation("org.bytedeco:opencv-platform:4.6.0-1.5.8") // Includes all platforms
     implementation("org.bytedeco:openblas-platform:0.3.21-1.5.8") // For math optimizations
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2")
 }
-
+application {
+    mainClassName = 'convolution.MainKt'
+}
+run {
+    standardInput = System.in
+}
 test {
     useJUnitPlatform()
 }
