--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '2.1.0'
     id 'application'
+    id 'org.jlleitschuh.gradle.ktlint' version '11.6.0'
 }
 
 group = 'org.example'
@@ -29,3 +30,4 @@ test {
 kotlin {
     jvmToolchain(20)
 }
+
